examples/test/testpolicy17174.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17174
  namespace: namespace291
spec:
  podSelector:
    matchLabels:
      key8: value1
      key48: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value9
      podSelector:
        matchLabels:
          key20: value44
          key2: value27
          key34: value18
